--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
         "wdio": "wdio run wdio.conf.js",
         "allure": "allure generate allure-results --clean && allure open"
     },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/bradleyreaney/wdio-ui-tests.git"
+    },
     "author": "Bradley Reaney",
     "license": "ISC",
     "devDependencies": {
@@ -15,7 +19,7 @@
         "@wdio/local-runner": "^7.16.13",
         "@wdio/mocha-framework": "^7.16.13",
         "@wdio/spec-reporter": "^7.16.13",
-        "chromedriver": "^97.0.2",
+        "chromedriver": "97.0.4",
         "eslint": "^8.8.0",
         "eslint-plugin-wdio": "^7.4.2",
         "wdio-chromedriver-service": "^7.2.6"
